RestClient 2.0
Much better API for making web requests and parsing them.
No longer relies on okhttp
Allows customizing user agent

Updates all references to RestClient with the new API